# marketplace-workflow-system

./: .env.example  .gitignore  Makefile  PROGRESS.md  README.md  REQUIREMENTS.md  claude.md  docker-compose.yml  setup.sh
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 821e65b04240_initial_tables.py  9448ffeca54f_datetime_timezone_aware.py  ff9855658ae8_add_timezone_to_deadline_columns.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/auth/: router.py  schemas.py  service.py  utils.py
backend/app/models/: __init__.py  project.py  refresh_token.py  request.py  submission.py  task.py  user.py
backend/app/projects/: router.py  schemas.py  service.py
backend/app/requests/: router.py  schemas.py  service.py
backend/app/storage/: service.py
backend/app/submissions/: router.py  schemas.py  service.py
backend/app/tasks/: router.py  schemas.py  service.py
backend/app/users/: router.py  schemas.py  service.py
backend/scripts/: reset_db.py  seed.py  start.sh  test_workflow.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: animated-badge.tsx  animated-list.tsx  app-shell.tsx  auth-provider.tsx  lifecycle-stepper.tsx  providers.tsx  theme-toggle.tsx
frontend/src/hooks/: use-auth.ts  use-buyer.ts  use-projects.ts  use-solver.ts  use-users.ts
frontend/src/lib/: api-client.ts  utils.ts
frontend/src/stores/: auth-store.ts
(+18 files in other folders)
